# HeadOverHeels

./: AUTHORS  Makefile.am  README.md  STORY  bintrailingspacechars-sed-bsd.sh  build-osx.sh  configure.ac  create-release-osx.sh  cygwin-build.sh  install_name_tool-headoverheels.howto  linux-build.sh  msys2-build.sh
gamedata/sound/: Makefile.am  bonus.xml  generate-makefile-am.sh  lose-life.xml
gamedata/text/: Makefile.am  af_ZA.xml  ast_ES.xml  ca_ES.xml  credits.xml  da_DK.xml  de_DE.xml  en_UK.xml  en_US.xml  es_ES.xml  es_LA.xml  eu_ES.xml  fi_FI.xml  fr_FR.xml  gl_ES.xml  hr_HR.xml  hu_HU.xml  it_IT.xml  la_VA.xml  language.xml  language.xsd  pl_PL.xml  pt_BR.xml  pt_PT.xml  ru_RU.xml  sk_SK.xml  sr_SR.xml  val_ES.xml
source/: AbstractItem.cpp  AbstractItem.hpp  Automap.cpp  Automap.hpp  AvatarItem.cpp  AvatarItem.hpp  BonusManager.cpp  BonusManager.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  ConnectedRooms.cpp  ConnectedRooms.hpp  DescribedItem.cpp  DescribedItem.hpp  DescriptionOfDoor.cpp  DescriptionOfDoor.hpp  DescriptionOfItem.cpp  DescriptionOfItem.hpp  Door.cpp  Door.hpp  Drawable.hpp  FlickeringColor.cpp  FlickeringColor.hpp  FloorTile.cpp  FloorTile.hpp  FreeItem.cpp  FreeItem.hpp  GameInfo.cpp  GameInfo.hpp  GameManager.cpp  GameManager.hpp  GameMap.cpp  GameMap.hpp  GamePreferences.cpp  GamePreferences.hpp  GameSaverAndLoader.cpp  GameSaverAndLoader.hpp  GridItem.cpp  (+75 more)
source/activities/: Activity.hpp  ActivityOfItem.hpp  ActivityToString.hpp  DisplaceKindOfActivity.cpp  DisplaceKindOfActivity.hpp  Displacing.cpp  Displacing.hpp  FallKindOfActivity.cpp  FallKindOfActivity.hpp  Falling.cpp  Falling.hpp  JumpKindOfActivity.cpp  JumpKindOfActivity.hpp  Jumping.cpp  Jumping.hpp  KindOfActivity.cpp  KindOfActivity.hpp  MoveKindOfActivity.cpp  MoveKindOfActivity.hpp  Moving.cpp  Moving.hpp  PropagateActivity.cpp  PropagateActivity.hpp
source/algif/: README  algif.c  algif.h  lzw.c
source/algif5/: algif.c  readme.html
source/alogg/: aloggpth.h
source/behaviors/: Behavior.cpp  Behavior.hpp  Bonus.cpp  Bonus.hpp  CharacterHead.cpp  CharacterHead.hpp  CharacterHeadAndHeels.cpp  CharacterHeadAndHeels.hpp  CharacterHeels.cpp  CharacterHeels.hpp  Conveyor.cpp  Conveyor.hpp  ConveyorBelt.cpp  ConveyorBelt.hpp  CreatorOfBehaviors.cpp  CreatorOfBehaviors.hpp  Detector.cpp  Detector.hpp  Doughnut.cpp  Doughnut.hpp  Driven.cpp  Driven.hpp  Elevator.cpp  Elevator.hpp  FinalBall.cpp  FinalBall.hpp  Hunter.cpp  Hunter.hpp  Impel.cpp  Impel.hpp  Mobile.cpp  Mobile.hpp  Patrol.cpp  Patrol.hpp  PlayerControlled.cpp  PlayerControlled.hpp  PlayerHead.hpp  PlayerHeadAndHeels.hpp  PlayerHeels.cpp  RemoteControl.cpp  (+21 more)
source/gui/: AnimatedPictureWidget.cpp  AnimatedPictureWidget.hpp  ColorCyclingLabel.cpp  ColorCyclingLabel.hpp  Font.cpp  Font.hpp  Gui.hpp  GuiManager.cpp  GuiManager.hpp  KeyHandler.hpp  Label.cpp  Label.hpp  LanguageManager.cpp  LanguageManager.hpp  LanguageStrings.cpp  LanguageStrings.hpp  LanguageText.hpp  Menu.cpp  Menu.hpp  MenuWithTwoColumns.cpp  MenuWithTwoColumns.hpp  MenuWithValues.cpp  MenuWithValues.hpp  PictureWidget.hpp  Screen.cpp  Screen.hpp  Slide.cpp  Slide.hpp  SlideWithHeadAndHeels.cpp  SlideWithHeadAndHeels.hpp  TextField.cpp  TextField.hpp  TheListOfSavedGames.cpp  TheListOfSavedGames.hpp  TheListOfSavedGamesSlide.hpp  TheMainMenu.cpp  TheMainMenu.hpp  TheMainMenuSlide.hpp  Widget.hpp
source/guiactions/: Action.hpp  ActionWithHandlingKeys.hpp  AllCreatedActions.cpp  AllCreatedActions.hpp  ChooseLanguage.cpp  ChooseLanguage.hpp  ContinueGame.cpp  ContinueGame.hpp  CreateAudioMenu.cpp  CreateAudioMenu.hpp  CreateCongratulationsScreen.cpp  CreateCongratulationsScreen.hpp  CreateEndScreen.cpp  CreateEndScreen.hpp  CreateGameOverSlide.cpp  CreateGameOverSlide.hpp  CreateGraphicsAreaSizeMenu.cpp  CreateGraphicsAreaSizeMenu.hpp  CreateKeyboardMenu.cpp  CreateKeyboardMenu.hpp  CreateKeysMenu.cpp  CreateKeysMenu.hpp  CreateLanguageMenu.cpp  CreateLanguageMenu.hpp  CreateListOfSavedGames.cpp  CreateListOfSavedGames.hpp  CreateMainMenu.cpp  CreateMainMenu.hpp  CreateMenuOfGraphicsSets.cpp  CreateMenuOfGraphicsSets.hpp  CreateOptionsMenu.cpp  CreateOptionsMenu.hpp  CreatePlanetsScreen.cpp  CreatePlanetsScreen.hpp  CreateVideoMenu.cpp  CreateVideoMenu.hpp  ExitApplication.cpp  ExitApplication.hpp  LoadGame.cpp  LoadGame.hpp  (+18 more)
source/loadpng/: README  loadpng.c  loadpng.h
src/: BonusManager.cpp  BonusManager.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  DescriptionOfItem.cpp  DescriptionOfItem.hpp  Door.cpp  Door.hpp  Drawable.hpp  Exception.cpp  Exception.hpp  FlickeringColor.cpp  FlickeringColor.hpp  FloorTile.cpp  FloorTile.hpp  FreeItem.cpp  FreeItem.hpp  GameFileManager.cpp  GameFileManager.hpp  GameInfo.hpp  GameManager.cpp  GameManager.hpp  GamePreferences.cpp  GamePreferences.hpp  GameSaverAndLoader.cpp  GameSaverAndLoader.hpp  GridItem.cpp  GridItem.hpp  HPC.hpp  InputManager.cpp  InputManager.hpp  Ism.cpp  Ism.hpp  Isomot.cpp  Isomot.hpp  Item.cpp  Item.hpp  ItemData.cpp  (+65 more)
src/actions/: Action.cpp  Action.hpp  AdjustMusic.cpp  AdjustMusic.hpp  AdjustSoundFx.cpp  AdjustSoundFx.hpp  AdjustValue.cpp  AdjustValue.hpp  BeginGame.cpp  BeginGame.hpp  ContinueGame.cpp  ContinueGame.hpp  CreateAudioMenu.cpp  CreateAudioMenu.hpp  CreateCongratulationsScreen.cpp  CreateCongratulationsScreen.hpp  CreateEndScreen.cpp  CreateEndScreen.hpp  CreateFileGameMenu.cpp  CreateFileGameMenu.hpp  CreateKeyboardMenu.cpp  CreateKeyboardMenu.hpp  CreateLanguageMenu.cpp  CreateLanguageMenu.hpp  CreateListOfSavedGames.cpp  CreateListOfSavedGames.hpp  CreateMainMenu.cpp  CreateMainMenu.hpp  CreateMenuOfGraphicSets.cpp  CreateMenuOfGraphicSets.hpp  CreatePlanetsScreen.cpp  CreatePlanetsScreen.hpp  CreateVideoMenu.cpp  CreateVideoMenu.hpp  ExitApplication.cpp  ExitApplication.hpp  LoadGame.cpp  LoadGame.hpp  PlaySound.hpp  RedefineKey.cpp  (+9 more)
src/activities/: ActivityOfItem.hpp  DisplaceKindOfActivity.cpp  DisplaceKindOfActivity.hpp  FallKindOfActivity.cpp  FallKindOfActivity.hpp  JumpKindOfActivity.cpp  JumpKindOfActivity.hpp  KindOfActivity.cpp  KindOfActivity.hpp  (+2 more)
(+1048 files in other folders)
