AUTOMAKE_OPTIONS = -Wno-override

if DEBUG
    AM_CFLAGS = -g -O0 -DDEBUG=1
    AM_CXXFLAGS = -g -O0 -DDEBUG=1
else
    AM_CFLAGS = -O3
    AM_CXXFLAGS = -O3
endif

headoverheels_CXXFLAGS = -Wall -Wno-deprecated -I. -Iloadpng -Ialgif -Igui -Iguiactions -Ibehaviors -Iactivities $(AM_CXXFLAGS)

AM_LDFLAGS = `allegro-config --libs release` -lvorbisfile -lvorbisenc -lvorbis -logg -lxerces-c -lpthread -lz -lpng

bin_PROGRAMS = headoverheels

headoverheels_SOURCES = loadpng/loadpng.c \
			loadpng/savepng.c \
			loadpng/regpng.c \
			algif/algif.c \
			algif/gif.c \
			algif/lzw.c \
			main.cpp \
			Way.cpp \
			Way.hpp \
			Color.cpp \
			Color.hpp \
			Drawable.hpp \
			Mediated.hpp \
			Camera.cpp \
			Camera.hpp \
			Door.cpp \
			Door.hpp \
			FloorTile.cpp \
			FloorTile.hpp \
			Item.cpp \
			Item.hpp \
			GridItem.cpp \
			GridItem.hpp \
			FreeItem.cpp \
			FreeItem.hpp \
			PlayerItem.cpp \
			PlayerItem.hpp \
			Mediator.cpp \
			Mediator.hpp \
			ShadowCaster.cpp \
			ShadowCaster.hpp \
			GameFileManager.cpp \
			GameFileManager.hpp \
			GameManager.cpp \
			GameManager.hpp \
			Timer.hpp \
			TimerPOSIX.cpp \
			TimerPOSIX.hpp \
			TimerWindows.cpp \
			TimerWindows.hpp \
			InputManager.cpp \
			InputManager.hpp \
			Ism.cpp \
			Ism.hpp \
			Isomot.cpp \
			Isomot.hpp \
			ItemData.cpp \
			ItemData.hpp \
			ItemDataManager.cpp \
			ItemDataManager.hpp \
			MapManager.cpp \
			MapManager.hpp \
			MapRoomData.cpp \
			MapRoomData.hpp \
			RoomBuilder.cpp \
			RoomBuilder.hpp \
			Room.cpp \
			Room.hpp \
			BonusManager.cpp \
			BonusManager.hpp \
			SoundManager.cpp \
			SoundManager.hpp \
			Wall.cpp \
			Wall.hpp \
			alogg/alogg.c \
			alogg/aloggcfg.h \
			alogg/alogg.h \
			alogg/aloggint.h \
			alogg/aloggpth.c \
			alogg/aloggpth.h \
			activities/KindOfActivity.cpp \
			activities/KindOfActivity.hpp \
			activities/DisplaceKindOfActivity.cpp \
			activities/DisplaceKindOfActivity.hpp \
			activities/FallKindOfActivity.cpp \
			activities/FallKindOfActivity.hpp \
			activities/JumpKindOfActivity.cpp \
			activities/JumpKindOfActivity.hpp \
			activities/MoveKindOfActivity.cpp \
			activities/MoveKindOfActivity.hpp \
			gui/ConfigurationManager.cpp \
			gui/ConfigurationManager.hpp \
			gui/Font.cpp \
			gui/Font.hpp \
			gui/Gui.hpp \
			gui/GuiManager.cpp \
			gui/GuiManager.hpp \
			gui/Picture.cpp \
			gui/Picture.hpp \
			gui/AnimatedPicture.cpp \
			gui/AnimatedPicture.hpp \
			gui/Label.cpp \
			gui/Label.hpp \
			gui/LanguageText.cpp \
			gui/LanguageText.hpp \
			gui/LanguageManager.cpp \
			gui/LanguageManager.hpp \
			gui/Menu.cpp \
			gui/Menu.hpp \
			gui/MenuWithValues.cpp \
			gui/MenuWithValues.hpp \
			gui/MenuWithTwoColumns.cpp \
			gui/MenuWithTwoColumns.hpp \
			gui/Screen.cpp \
			gui/Screen.hpp \
			gui/TextField.cpp \
			gui/TextField.hpp \
			gui/Widget.cpp \
			gui/Widget.hpp \
			guiactions/Action.hpp \
			guiactions/PlaySound.hpp \
			guiactions/ContinueGame.cpp \
			guiactions/ContinueGame.hpp \
			guiactions/CreateAudioMenu.cpp \
			guiactions/CreateAudioMenu.hpp \
			guiactions/CreateVideoMenu.hpp \
			guiactions/CreateVideoMenu.cpp \
			guiactions/CreateMenuOfGraphicSets.hpp \
			guiactions/CreateMenuOfGraphicSets.cpp \
			guiactions/CreateCongratulationsScreen.cpp \
			guiactions/CreateCongratulationsScreen.hpp \
			guiactions/CreateEndScreen.cpp \
			guiactions/CreateEndScreen.hpp \
			guiactions/CreateListOfSavedGames.cpp \
			guiactions/CreateListOfSavedGames.hpp \
			guiactions/CreateKeyboardMenu.cpp \
			guiactions/CreateKeyboardMenu.hpp \
			guiactions/CreateLanguageMenu.cpp \
			guiactions/CreateLanguageMenu.hpp \
			guiactions/CreateMainMenu.cpp \
			guiactions/CreateMainMenu.hpp \
			guiactions/CreatePlanetsScreen.cpp \
			guiactions/CreatePlanetsScreen.hpp \
			guiactions/ExitApplication.cpp \
			guiactions/ExitApplication.hpp \
			guiactions/LoadGame.cpp \
			guiactions/LoadGame.hpp \
			guiactions/RedefineKey.cpp \
			guiactions/RedefineKey.hpp \
			guiactions/SaveGame.cpp \
			guiactions/SaveGame.hpp \
			guiactions/SelectLanguage.cpp \
			guiactions/SelectLanguage.hpp \
			guiactions/ShowAuthors.cpp \
			guiactions/ShowAuthors.hpp \
			behaviors/CannonBall.cpp \
			behaviors/CannonBall.hpp \
			behaviors/ConveyorBelt.cpp \
			behaviors/ConveyorBelt.hpp \
			behaviors/Detector.cpp \
			behaviors/Detector.hpp \
			behaviors/Drive.cpp \
			behaviors/Drive.hpp \
			behaviors/Elevator.cpp \
			behaviors/Elevator.hpp \
			behaviors/Hunter.cpp \
			behaviors/Hunter.hpp \
			behaviors/Impel.cpp \
			behaviors/Impel.hpp \
			behaviors/Mobile.cpp \
			behaviors/Mobile.hpp \
			behaviors/OneWay.cpp \
			behaviors/OneWay.hpp \
			behaviors/Patrol.cpp \
			behaviors/Patrol.hpp \
			behaviors/PlayerHeadAndHeels.cpp \
			behaviors/PlayerHeadAndHeels.hpp \
			behaviors/PlayerHead.cpp \
			behaviors/PlayerHead.hpp \
			behaviors/PlayerHeels.cpp \
			behaviors/PlayerHeels.hpp \
			behaviors/RemoteControl.cpp \
			behaviors/RemoteControl.hpp \
			behaviors/FireDoughnut.cpp \
			behaviors/FireDoughnut.hpp \
			behaviors/Sink.cpp \
			behaviors/Sink.hpp \
			behaviors/Special.cpp \
			behaviors/Special.hpp \
			behaviors/Switch.cpp \
			behaviors/Switch.hpp \
			behaviors/Teleport.cpp \
			behaviors/Teleport.hpp \
			behaviors/Trampoline.cpp \
			behaviors/Trampoline.hpp \
			behaviors/Turn.cpp \
			behaviors/Turn.hpp \
			behaviors/UserControlled.cpp \
			behaviors/UserControlled.hpp \
			behaviors/Volatile.cpp \
			behaviors/Volatile.hpp \
			behaviors/Behavior.cpp \
			behaviors/Behavior.hpp \
			csxml/ConfigurationXML.cpp \
			csxml/ConfigurationXML.hpp \
			csxml/ItemsXML.cpp \
			csxml/ItemsXML.hpp \
			csxml/LanguageXML.cpp \
			csxml/LanguageXML.hpp \
			csxml/MapXML.cpp \
			csxml/MapXML.hpp \
			csxml/RoomXML.cpp \
			csxml/RoomXML.hpp \
			csxml/SaveGameXML.cpp \
			csxml/SaveGameXML.hpp \
			csxml/SoundsXML.cpp \
			csxml/SoundsXML.hpp
